# audio-to-video

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build-executables.yml
audio_to_video/application/: render_job_service.py
audio_to_video/domain/: models.py  validation.py
audio_to_video/infrastructure/: audio_analyzer.py  ffmpeg.py  frame_renderer.py
audio_to_video/ui/: app.py
docs/RFCs/: 001-audio-to-video.md  002-exec.md
packaging/: pyinstaller.spec
